force-app/main/default/objects/SML__Converse_Campaign__c/SML__Converse_Campaign__c.object-meta.xml
<CustomObject>
    <label>Converse Campaign</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Converse Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>