force-app/main/default/objects/SML__Converse_Campaign__c/fields/SML__Allow_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>SML__Allow_Duplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Duplicate</label>
    <type>Checkbox</type>
</CustomField>