force-app/main/default/objects/SML__Converse_Campaign__c/fields/SML__Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>SML__Campaign_Type__c</fullName>
    <description>Campaign Type</description>
    <label>Campaign Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Converse Apps</fullName>
            </value>
            <value>
                <fullName>Templates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>