force-app/main/default/objects/SML__Converse_Campaign__c/fields/SML__Channel_Code__c.field-meta.xml
<CustomField>
    <fullName>SML__Channel_Code__c</fullName>
    <label>Channel Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>