force-app/main/default/objects/SML__Converse_Campaign__c/fields/SML__Converse_Template__c.field-meta.xml
<CustomField>
    <fullName>SML__Converse_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Template reference</description>
    <label>Converse Template</label>
    <referenceTo>smagicinteract__SMS_Template__c</referenceTo>
    <relationshipName>Converse_Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>