force-app/main/default/objects/SML__Converse_Campaign__c/fields/SML__CRON_Expression__c.field-meta.xml
<CustomField>
    <fullName>SML__CRON_Expression__c</fullName>
    <label>CRON Expression</label>
    <length>255</length>
    <type>Text</type>
</CustomField>