force-app/main/default/objects/SML__Converse_Campaign__c/fields/SML__Description__c.field-meta.xml
<CustomField>
    <fullName>SML__Description__c</fullName>
    <description>Description of campaign.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>