force-app/main/default/objects/SML__Converse_Campaign__c/fields/SML__End_Date__c.field-meta.xml
<CustomField>
    <fullName>SML__End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>