force-app/main/default/objects/SML__Converse_Campaign__c/fields/SML__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>SML__Error_Message__c</fullName>
    <label>Error Message</label>
    <type>TextArea</type>
</CustomField>