force-app/main/default/objects/SML__Converse_Campaign__c/fields/SML__Execute_Now__c.field-meta.xml
<CustomField>
    <fullName>SML__Execute_Now__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Execute Now</label>
    <type>Checkbox</type>
</CustomField>