force-app/main/default/objects/SML__Converse_Campaign__c/fields/SML__Executed_Date_For_Email__c.field-meta.xml
<CustomField>
    <fullName>SML__Executed_Date_For_Email__c</fullName>
    <description>Executed Date and time For Email template</description>
    <label>Executed Date For Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>