force-app/main/default/objects/SML__Converse_Campaign__c/fields/SML__isRecurring__c.field-meta.xml
<CustomField>
    <fullName>SML__isRecurring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isRecurring</label>
    <type>Checkbox</type>
</CustomField>