force-app/main/default/objects/SML__Converse_Campaign__c/fields/SML__Last_Executed_Date__c.field-meta.xml
<CustomField>
    <fullName>SML__Last_Executed_Date__c</fullName>
    <description>To store the last executed date in case of recurring schedule campaigns.</description>
    <label>Last Executed Date</label>
    <type>DateTime</type>
</CustomField>