force-app/main/default/objects/SML__Converse_Campaign__c/fields/SML__Later_Exec_CampaignId__c.field-meta.xml
<CustomField>
    <fullName>SML__Later_Exec_CampaignId__c</fullName>
    <label>Later Exec CampaignId</label>
    <length>40</length>
    <type>Text</type>
</CustomField>