force-app/main/default/objects/SML__Converse_Campaign__c/fields/SML__List_View__c.field-meta.xml
<CustomField>
    <fullName>SML__List_View__c</fullName>
    <description>Listview value.</description>
    <label>List View</label>
    <length>255</length>
    <type>Text</type>
</CustomField>