force-app/main/default/objects/SML__Converse_Campaign__c/fields/SML__MOC_Id_Column_Number__c.field-meta.xml
<CustomField>
    <fullName>SML__MOC_Id_Column_Number__c</fullName>
    <description>To store the column number of record ids of object configured in MOC.</description>
    <label>MOC Id Column Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>