force-app/main/default/objects/SML__Converse_Campaign__c/fields/SML__Next_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>SML__Next_Scheduled_Date__c</fullName>
    <description>To store the next scheduled date for the scheduled and recurring scheduled campaigns.</description>
    <label>Next Scheduled Date</label>
    <type>DateTime</type>
</CustomField>