force-app/main/default/objects/SML__Converse_Campaign__c/fields/SML__Object__c.field-meta.xml
<CustomField>
    <fullName>SML__Object__c</fullName>
    <description>Object name(Contact,Lead).</description>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>