force-app/main/default/objects/SML__Converse_Campaign__c/fields/SML__Objective__c.field-meta.xml
<CustomField>
    <fullName>SML__Objective__c</fullName>
    <description>Objective of campaign.</description>
    <label>Objective</label>
    <length>255</length>
    <type>Text</type>
</CustomField>