force-app/main/default/objects/SML__Converse_Campaign__c/fields/SML__Phone_Field__c.field-meta.xml
<CustomField>
    <fullName>SML__Phone_Field__c</fullName>
    <label>Phone Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>