force-app/main/default/objects/SML__Converse_Campaign__c/fields/SML__Recepients_Count__c.field-meta.xml
<CustomField>
    <fullName>SML__Recepients_Count__c</fullName>
    <label>Recepients Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>