force-app/main/default/objects/SML__Converse_Campaign__c/fields/SML__Report__c.field-meta.xml
<CustomField>
    <fullName>SML__Report__c</fullName>
    <description>Id of report selected</description>
    <inlineHelpText>Id of report selected</inlineHelpText>
    <label>Report</label>
    <length>255</length>
    <type>Text</type>
</CustomField>