force-app/main/default/objects/SML__Converse_Campaign__c/fields/SML__Report_Id__c.field-meta.xml
<CustomField>
    <fullName>SML__Report_Id__c</fullName>
    <label>Report_Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>