force-app/main/default/objects/SML__Converse_Campaign__c/fields/SML__Report_Object__c.field-meta.xml
<CustomField>
    <fullName>SML__Report_Object__c</fullName>
    <label>Report Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>