force-app/main/default/objects/SML__Converse_Campaign__c/fields/SML__Schedule_Date__c.field-meta.xml
<CustomField>
    <fullName>SML__Schedule_Date__c</fullName>
    <label>Schedule Date</label>
    <type>Date</type>
</CustomField>