force-app/main/default/objects/SML__Converse_Campaign__c/fields/SML__Schedule_Later__c.field-meta.xml
<CustomField>
    <fullName>SML__Schedule_Later__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Schedule batch later</description>
    <label>Schedule Later</label>
    <type>Checkbox</type>
</CustomField>