force-app/main/default/objects/SML__Converse_Campaign__c/fields/SML__Schedule_Message__c.field-meta.xml
<CustomField>
    <fullName>SML__Schedule_Message__c</fullName>
    <label>Schedule Message</label>
    <type>TextArea</type>
</CustomField>