force-app/main/default/objects/SML__Converse_Campaign__c/fields/SML__Schedule_Time__c.field-meta.xml
<CustomField>
    <fullName>SML__Schedule_Time__c</fullName>
    <label>Schedule Time</label>
    <type>Time</type>
</CustomField>