force-app/main/default/objects/SML__Converse_Campaign__c/fields/SML__Schedule_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>SML__Schedule_Time_Zone__c</fullName>
    <label>Schedule Time Zone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>