force-app/main/default/objects/SML__Converse_Campaign__c/fields/SML__SMS_Schedule__c.field-meta.xml
<CustomField>
    <fullName>SML__SMS_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Schedule Info</description>
    <inlineHelpText>Schedule Info</inlineHelpText>
    <label>SMS Schedule</label>
    <referenceTo>smagicinteract__SMS_Schedule__c</referenceTo>
    <relationshipLabel>Converse Campaigns</relationshipLabel>
    <relationshipName>Converse_Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>