force-app/main/default/objects/SML__Converse_Campaign__c/fields/SML__SMS_SenderId__c.field-meta.xml
<CustomField>
    <fullName>SML__SMS_SenderId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SMS SenderId</label>
    <referenceTo>smagicinteract__SMS_SenderId__c</referenceTo>
    <relationshipLabel>Converse Campaigns</relationshipLabel>
    <relationshipName>Converse_Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>