force-app/main/default/objects/SML__Converse_Campaign__c/fields/SML__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>SML__Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>