force-app/main/default/objects/SML__Converse_Campaign__c/fields/SML__Status__c.field-meta.xml
<CustomField>
    <fullName>SML__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Ongoing</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Aborted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>