force-app/main/default/objects/SML__Converse_Campaign__c/fields/SML__Total_Records__c.field-meta.xml
<CustomField>
    <fullName>SML__Total_Records__c</fullName>
    <description>Total records present in the list view/ report</description>
    <label>Total Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>