force-app/main/default/objects/SML__Converse_Campaign__c/fields/SML__Type__c.field-meta.xml
<CustomField>
    <fullName>SML__Type__c</fullName>
    <description>Message Type</description>
    <inlineHelpText>From where to pick records</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>List View</fullName>
            </value>
            <value>
                <fullName>Report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>