force-app/main/default/objects/SML__Converse_Campaign__c/validationRules/SML__Unique_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>SML__Unique_Name</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISNEW(), IF( UPPER(Name) == UPPER(VLOOKUP($ObjectType.SML__Converse_Campaign__c.Fields.Name,$ObjectType.SML__Converse_Campaign__c.Fields.Name, Name)),true , false),AND(ISCHANGED(Name), IF( UPPER(Name) == UPPER(VLOOKUP($ObjectType.SML__Converse_Campaign__c.Fields.Name,$ObjectType.SML__Converse_Campaign__c.Fields.Name, Name)),true,false)))</errorConditionFormula>
    <errorMessage>Campaign Name must be Unique</errorMessage>
</ValidationRule>